<resources>
    <string name="app_name">PiHome</string>
    <string name="more">More</string>
    <string name="allow">Allow</string>
    <string name="ban">Do not show again</string>
    <string name="finish">Finish</string>
    <string name="it_is_ok">OK!</string>
    <string name="i_known">Roger!</string>
    <string name="app_is_running">Application is running.</string>
    <string name="none_data">No data</string>
    <string name="close">Close</string>
    <string name="no_data">No content found</string>
    <string name="no_network">No network connection, please check your network</string>
    <string name="network_exception">Network Error</string>
    <string name="network_exception_tips">Please check your network connection and try again</string>
    <string name="open_gpg_tip">GPS permission required, please allow access to location service</string>
    <string name="permissions_tips_01">In order to use this app normally, please</string>
    <string name="permission_contacts">Allow read and write contacts</string>
    <string name="permission_mic">Allow access to microphone</string>
    <string name="permission_read_phone_state">Allow access to phone information</string>
    <string name="permission_location">Allow access to location</string>
    <string name="permission_storage">Allow read and write files</string>
    <string name="permission_bluetooth">Allow access to Bluetooth</string>
    <string name="permission_phone_settings">Allow changing phone settings</string>
    <string name="permission_camera">Allow use camera</string>
    <string name="permissions_tips_02">Please open system settings and grant this app</string>
    <string name="permission">permission</string>
    <string name="first_connect_device">Please connect the device first</string>
    <string name="unconnected_device">No Device Connected</string>
    <string name="unconnected_device_tips">No device connected, please connect or add device first</string>
    <string name="connectable_devies">Devices for connect</string>
    <string name="disconnect_device">Disconnect the device</string>
    <string name="msg_read_file_err_reading">Device busy, please try again</string>
    <string name="msg_read_file_err_offline">Device offline</string>
    <string name="msg_call_tip">Calling in progress&#8230;</string>
    <string name="no_support_reverberation">Reverb is not support on current device</string>
    <string name="bt_connecting">Connecting</string>
    <string name="device_status_unconnected">Disconnected</string>
    <string name="device_status_connected">Connected</string>
    <string name="device_status_using">Current in use</string>
    <string name="device_status_mandatory_upgrade">Update required</string>
    <string name="connect_device">Connect a device</string>
    <string name="connect_tip">Connection</string>
    <string name="device_connecting">Connecting&#8230;</string>
    <string name="bt_connect_failed">Failed to connect</string>
    <string name="device_status_reconnect">Reconnecting</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="user_agreement">User agreement</string>
    <string name="agree_with">I agree with</string>
    <string name="dialog_tips">Reminder</string>
    <string name="user_service_tips">\t\tWelcome to use %1$s APP.When you use it, you need to connect to the data network or WLAN operator. Please consult the local operator for the traffic cost.We attach great importance to your privacy protection and personal information protection.</string>
    <string name="user_service_tips2">Please read “User agreement” and “Privacy policy” carefully before you use %1$s APP. You can use our service after you agree and accept all the terms.</string>
    <string name="privacy_policy_name">“Privacy policy”</string>
    <string name="user_service_name">“User agreement”</string>
    <string name="and">and</string>
    <string name="agree_and_use">Agree and continue</string>
    <string name="not_agree_and_exit">Disagree and exit</string>
    <string name="tab_multimedia">Media</string>
    <string name="tab_eq">Equalizer</string>
    <string name="tab_device">Devices</string>
    <string name="switch_classic_device_tips">The current audio source output device [%1$s] is inconsistent with the device [%2$s] in use. Please switch the output  [%3$s] to ensure the user experience</string>
    <string name="add_device">Add New Deivce</string>
    <string name="my_devices">My Devices</string>
    <string name="pack_up">Less Info</string>
    <string name="device_connecting_tips">Connecting, please wait&#8230;</string>
    <string name="bluetooth_not_enable">Bluetooth is OFF</string>
    <string name="connect_device_over_limit">Reach maximum Bluetooth devices, please disconnect unwanted devices at system setting</string>
    <string name="background_show_activity_failed_tips">BBackground activity (pop-up window) permission denied, please grant permission</string>
    <string name="switch_device_tips">CDevice switch successful.</string>
    <string name="device_not_using">This device is currently not in use</string>
    <string name="device_charging_bin">%1$sCharging case</string>
    <string name="connect_history_failed_tips">Device not found:[%1$s]</string>
    <string name="multi_media_local">Local Media</string>
    <string name="multi_media_usb_drive">USB Drive</string>
    <string name="multi_media_sd_card">SD Card</string>
    <string name="multi_media_fm_launch">FM Transmitter</string>
    <string name="multi_media_fm_receive">FM Receiver</string>
    <string name="multi_media_line_in">AUX</string>
    <string name="multi_media_light_settings">Light Effects</string>
    <string name="multi_media_alarm">Alarm</string>
    <string name="multi_media_search_device">Find My Devices</string>
    <string name="multi_media_net_radio">Online Radio</string>
    <string name="multi_media_sound_card">Karaoke</string>
    <string name="multi_media_spdif">SPDIF</string>
    <string name="multi_media_pc_slave">PC Slave</string>
    <string name="none_music_data">No music file found, please add music</string>
    <string name="song_list_top_all_song">All Music</string>
    <string name="song_list_top_song_num">(Total %1$d Songs)</string>
    <string name="current_version">Current version</string>
    <string name="local_music_none">No local music file found</string>
    <string name="back_to_root">Now in root directory</string>
    <string name="device_music">Music in device</string>
    <string name="switch_mode_success">Switched to %1$s Mode </string>
    <string name="msg_read_file_err_beyond_max_depth">Beyond readable depth</string>
    <string name="sd_card">SD Card</string>
    <string name="udisk">USB Drive</string>
    <string name="none_id3_music_data">Fail to obtain ID3 information</string>
    <string name="other_music_player">(from other music player app)</string>
    <string name="hdmi">HDMI</string>
    <string name="optical_fiber">Optical</string>
    <string name="coaxial">Coaxial</string>
    <string name="search_forward">search forward</string>
    <string name="search_all">search all</string>
    <string name="search_backward">search backward</string>
    <string name="freq_point_collect">Save channel</string>
    <string name="freq_point_manage">Manage channel</string>
    <string name="net_radio">Online Radio</string>
    <string name="freq_point_collect_success">Channel Saved</string>
    <string name="freq_point_collect_existed">Saved</string>
    <string name="freq_point">Frequency</string>
    <string name="searching">Searching for channels&#8230;</string>
    <string name="fm_value_no_change">FM Frequency unchanged</string>
    <string name="fm_range">Frequency range 87.5~108.0MHz</string>
    <string name="fm_only_one_decimal">Frequency is accurate to one decimal place</string>
    <string name="fm_no_decimal">Null on decimal place</string>
    <string name="setting">Setting</string>
    <string name="named">Name</string>
    <string name="device_name_over_limit">Device name too long, limit is %1$d characters</string>
    <string name="not_support_tips">Feature not yet supported</string>
    <string name="tip_empty_device_name">Name should not be empty</string>
    <string name="tip_same_device_name">Device name unchanged</string>
    <string name="require_tws_info_error">Failed to obtain device information, click to obtain again</string>
    <string name="retrieved">Retrieved</string>
    <string name="firmware_current_version">Current version</string>
    <string name="found_new_version">Firmware update found: %1$s</string>
    <string name="new_version">New firmware update: %1$s</string>
    <string name="download_tips">downloading</string>
    <string name="upgrade_tips">Firmware updating</string>
    <string name="upgrading_tips">Updating</string>
    <string name="upgrade_progress_prepare">Update ready %1$s</string>
    <string name="upgrade_progress_update">Updating %1$s</string>
    <string name="upgrade_warning">Firmware updating, please keep Bluetooth and networking connection, DO NOT power-off Bluetooth device or lock screen</string>
    <string name="upgrade_success">Update completed</string>
    <string name="upgrade_failed">Update failed</string>
    <string name="upgrade_cancel">Update cancelled</string>
    <string name="device_must_mandatory_upgrade">\t\t\t\tDevice (%1$s) requires a full OTA for properly use.</string>
    <string name="network_err_tips">Failed to connect server, please check network.</string>
    <string name="double_click_to_disconnect">Double tap Back button will disconnect device.</string>
    <string name="upgrade_immediately">Update now</string>
    <string name="ota_error_msg_receive_cmd_timeout">Command receive timeout</string>
    <string name="ota_error_msg_device_disconnected">Bluetooth disconnected</string>
    <string name="ota_error_msg_error_param">Parameter error</string>
    <string name="ota_error_msg_param_null">Parameter null</string>
    <string name="ota_error_msg_file_not_found">File not found</string>
    <string name="ota_error_msg_file_read_fail">Failed to read file</string>
    <string name="ota_error_msg_file_not_exist">File not exist</string>
    <string name="ota_error_msg_bluetooth_not_connected">Bluetooth disconnected</string>
    <string name="ota_error_msg_no_update_version">No update found</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="follow_system">Use system default language</string>
    <string name="english">English</string>
    <string name="japanese">日本語</string>
    <string name="feedback_type">Feedback type</string>
    <string name="problem_feedback">Problem feedback</string>
    <string name="please_input_feedback">Please enter your feedback in detail</string>
    <string name="please_input_phone">Please enter your phone number for contact</string>
    <string name="commit">Submit</string>
    <string name="save_configuration">Save configuration</string>
    <string name="use_device_auth">Confirm to enable device authorization?</string>
    <string name="support_show_product_dialog">Confirm to enable pop-up window?</string>
    <string name="support_local_ota">Confirm to enable local OTA?</string>
    <string name="show_dialog_rssi_tips">Pop-up window sensitivity:</string>
    <string name="rssi_unit">dBm</string>
    <string name="input_rssi_hint">Please input desired RSSI value [-100~0]dBm</string>
    <string name="local_ota_desc">Local OTA test instructions:\n1. The upgrade file name is fixed as update.ufw\n2. Location of upgrade files:\n\t2.1 Android 10.0+, file storage \'root/Android/data/%1$s/files/%2$s/upgrade/\'\n\t2.2 Android 10.0 below，file storage \'root/%3$s/upgrade/\'\n3.Upgrade file format: app_log_[timestamp].txt</string>
    <string name="test_custom_cmd">Customized command test</string>
    <string name="use_save_log">Do you want to enable saving log files?</string>
</resources>