<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jieli.btsmart.ui.test.TestConfigurationActivity">

    <include
        android:id="@+id/view_top_bar"
        layout="@layout/view_common_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--保存Log日志-->
    <CheckBox
        android:id="@+id/cb_use_save_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/use_save_log"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top_bar" />
    <!--设备认证-->
    <CheckBox
        android:id="@+id/cb_use_device_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/use_device_auth"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_use_save_log" />

    <!--弹窗功能-->
    <CheckBox
        android:id="@+id/cb_show_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/support_show_product_dialog"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_use_device_auth" />

    <TextView
        android:id="@+id/tv_rssi_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="3dp"
        android:text="@string/show_dialog_rssi_tips"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_show_dialog" />

    <EditText
        android:id="@+id/et_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/input_rssi_hint"
        android:inputType="number"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_rssi_tips"
        app:layout_constraintTop_toBottomOf="@+id/cb_show_dialog"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_rssi_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/rssi_unit"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_rssi"
        app:layout_constraintStart_toEndOf="@+id/et_rssi"
        app:layout_constraintTop_toBottomOf="@+id/cb_show_dialog" />
    <!--  本地OTA  -->
    <CheckBox
        android:id="@+id/cb_local_ota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        android:text="@string/support_local_ota"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rssi_tips" />

    <TextView
        android:id="@+id/tv_local_ota_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="3dp"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_local_ota"
        tools:text="@string/local_ota_desc" />

    <!--保存配置-->
    <TextView
        android:id="@+id/tv_test_custom_cmd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_btn_purple_gray_selector"
        android:gravity="center"
        android:padding="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/test_custom_cmd"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_save_configuration"
        app:layout_constraintTop_toBottomOf="@+id/tv_local_ota_desc" />
    <!--自定义命令-->
    <TextView
        android:id="@+id/tv_save_configuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_btn_purple_gray_selector"
        android:gravity="center"
        android:padding="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/save_configuration"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_test_custom_cmd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_local_ota_desc" />


</androidx.constraintlayout.widget.ConstraintLayout>
