<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_eeeeee"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_feedback_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_feedback_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/feedback_type"
            android:textSize="@dimen/text_16sp" />

        <TextView
            android:id="@+id/tv_feedback_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/problem_feedback"
            android:textColor="@color/color_main"
            android:textSize="@dimen/text_16sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white_ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_feedback_title">

        <EditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:gravity="start"
            android:background="@null"
            android:hint="@string/please_input_feedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_feedback_text_len"
            android:text="0/200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_feedback"/>
        <View
            android:id="@+id/view_feedback_line"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/gray_eeeeee"
            app:layout_constraintTop_toBottomOf="@id/tv_feedback_text_len"
            android:layout_height="1dp"/>
        <EditText
            android:id="@+id/et_feedback_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/please_input_phone"
            android:inputType="phone"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/tv_feedback_text_len"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_feedback_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/white_ffffff"
        android:background="@drawable/bg_top_shape"
        android:text="@string/commit" />
</LinearLayout>