<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_ffffff"
        android:fitsSystemWindows="true"
        tools:context=".ui.mine.LanguageSetFragment">

        <!--        <include-->
        <!--            android:id="@+id/view_topbar"-->
        <!--            layout="@layout/view_topbar" />-->

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#F6F7F8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_follow_system"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:background="@color/white_ffffff"
            android:drawableEnd="@drawable/ic_choose_blue"
            android:gravity="center_vertical"
            android:padding="14dp"
            android:text="@string/follow_system"
            android:textColor="@color/black_242424"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_simplified_chinese"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white_ffffff"
            android:drawableEnd="@drawable/ic_choose_blue"
            android:gravity="center_vertical"
            android:padding="14dp"
            android:text="@string/simplified_chinese"
            android:textColor="@color/black_242424"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_follow_system" />


        <TextView
            android:id="@+id/tv_english"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white_ffffff"
            android:drawableEnd="@drawable/ic_choose_blue"
            android:gravity="center_vertical"
            android:padding="14dp"
            android:text="@string/english"
            android:textColor="@color/black_242424"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_simplified_chinese" />

        <TextView
            android:id="@+id/tv_japanese"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white_ffffff"
            android:drawableEnd="@drawable/ic_choose_blue"
            android:gravity="center_vertical"
            android:padding="14dp"
            android:text="@string/japanese"
            android:textColor="@color/black_242424"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_english" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#F7F7F7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_simplified_chinese" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#F7F7F7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_follow_system" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#F7F7F7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_english" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>