<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_device_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.jieli.btsmart.ui.device.DeviceFragment">

    <com.jieli.btsmart.ui.widget.color_cardview.CardView
        android:id="@+id/cv_device_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardBackgroundColor="@color/white_ffffff"
        app:cardCornerRadius="13dp"
        app:cardElevation="7dp"
        app:cardMaxElevation="7dp"
        app:contentPadding="3dp"
        app:cardShadowColorStart="@color/gray_translate_33cde6fb"
        app:cardShadowColorEnd="@color/white_translate_01ffffff"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

    </com.jieli.btsmart.ui.widget.color_cardview.CardView>

    <RelativeLayout
        android:id="@+id/rl_device_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_device_container"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_device_my_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_devices"
            android:textColor="@color/black_242424"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_device_connect_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingTop="4.5dp"
            android:paddingBottom="4.5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/connect_device"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_12sp"
            android:background="@drawable/bg_btn_purple_selector"
             />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_device_function_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_below="@+id/rl_device_bar"/>
    <TextView
        android:id="@+id/tv_device_no_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_FFDEDE"
        android:drawableStart="@drawable/ic_no_network"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:drawablePadding="10dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_13sp"
        android:text="@string/no_network"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        tools:text="无网络连接，请检查你的网络设置"
        />
</RelativeLayout>
